# orbit-wars

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.criteria/: kaggle-orbit-wars-day3-submit-2026-05-12.result.json  kaggle-orbit-wars-day3-submit-2026-05-12.yaml  kaggle-orbit-wars-day4-submit-2026-05-13.yaml  kaggle-orbit-wars-expansion-rule-mission.yaml  kaggle-orbit-wars-ppo-theta4-pfsp.yaml
agents/proxy/: grid_il.py  grid_il_active.py  grid_il_lakhindar.py  grid_il_lakhindar_active.py  grid_il_lakhindar_aggressive.py  grid_il_v2.py  grid_il_v2_active.py  il_v1.py  il_v2.py  il_v2_active.py  nn_random.py  ppo_v1.py  ppo_v1_pilot.py  ppo_v1_theta1.py  validator_v2.npz
configs/: exp001.yaml
docs/dev/: HANDOFF-2026-05-12-night.md  HANDOFF-2026-05-12-pivot.md  HANDOFF-2026-05-12.md  POSTMORTEM-2026-05-13-ppo-light-silent-bug.md  experiment-mgmt.md  remote-migration-2026-05-11.md
docs/discussion/: 0510.md  insights.md
docs/research/: 2026-05-11-engine-audit.md  2026-05-11-expansion-rule-design.md  2026-05-11-losing-play-analysis.md  2026-05-11-submission-analyses.md  2026-05-12-bowwow-reverse.md  2026-05-12-submission-analyses.md  2026-05-13-bovard-deep-eda.md  2026-05-13-lb-drift-analysis.md  2026-05-13-mcts-loss-analysis.md  2026-05-13-submission-analyses.md  data-quality-audit.md  lb-observations.dense.md  lb-observations.kids.md  lb_snapshot_2026-05-09.csv  past-comps.dense.md  past-comps.kids.md  past-comps.references.json  review-findings-day2-dawn.md
docs/strategy/: 2026-05-11-alphastar-league-design.md  2026-05-11-rl-best-practices.md  2026-05-11-score-2000-roadmap.md  2026-05-11-victory-roadmap.md  2026-05-12-roadmap-pivot.md  exp002-design.md  first-principles.dense.md  phase_eta_design.md  (+2 more)
notebooks/: train_il_filter_colab.ipynb  train_ppo_colab.ipynb  train_ppo_colab_day5.ipynb
submissions/: main_37f02d6.py
tests/: test_expansion_mission.py  test_mcts_sim_parity.py  test_missions.py  test_nn_agent.py  test_physics.py  test_smoke.py
tools/: _run_episode.py  build_bc_dataset.py  build_grid_bc_dataset.py  build_konbu_variants.py  build_ppo_lightweight.py  build_rahul_v2.py  build_validator_dataset.py  day2_submit.sh  day3_submit.sh  day4_submit.sh  decode_episode.py  drive_pull_ppo_v4.py  drive_upload_for_colab.py  drive_upload_il_filter.py  elo.py  eval_ppo_checkpoint.sh  extract_actions.py  genetic_tune_konbu.py  goldcheck.py  mcts_orbit_wars.py  orbit_wars_env.py  replay_inspector.py  replay_viewer.py  run_ppo_curriculum.sh  run_ppo_theta3.sh  run_ppo_theta4.sh  smoke_day3.sh  smoke_day4.sh  test_konbu_variants.sh  tournament.py  tournament_4p.py  train_grid_il.py  train_il_proxy.py  train_ppo.py  train_ppo_pfsp.py  train_validator.py  watch_orbit_wars.sh
(+387 files in other folders)
