[project]
name = "orbit-wars"
version = "0.0.1"
description = "Kaggle simulation/agent competition: orbit-wars"
requires-python = ">=3.11"
dependencies = [
    "kagglib",
    "kaggle>=1.6",
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=15.0",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    # Simulation / agent comps
    "kaggle-environments>=1.28.0",
    # RL training (optional, opt-in via `uv add`):
    #   stable-baselines3, gymnasium, ray[rllib], cleanrl
    "trueskill>=0.4.5",
    "torch>=2.11.0",
    "stable-baselines3>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=4.0",
    "nbstripout>=0.7",
]

[tool.uv.sources]
kagglib = { path = "../_shared/kagglib", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orbit_wars"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    # External public-kernel code adopted as-is for fast iteration.
    # We don't reformat upstream style; keep it grep-friendly with the original.
    "src/orbit_wars/agent.py",
    "experiments/*/main.py",
    "docs/research/public_kernels/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
